[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Environment/door4.png" type="Texture" id=1]
[ext_resource path="res://Assets/Environment/Sign_05.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Door.gd" type="Script" id=3]
[ext_resource path="res://Assets/PoetsenOne-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="Animation" id=3]
resource_name = "Appear"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("../../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 10 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "door_visible"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../../Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 132, 160 )

[sub_resource type="DynamicFont" id=6]
size = 144
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 54
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 57, 37 )

[node name="Door" type="Node2D"]
z_index = -2
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Door/DoorShape")
anims/Appear = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 11

[node name="Door" type="Area2D" parent="."]

[node name="DoorShape" type="CollisionShape2D" parent="Door"]
position = Vector2( -4, 0 )
shape = SubResource( 1 )
disabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="Door"]

[node name="Label" type="Label" parent="Door/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 6 )
text = "You Win
The Game"
align = 1
valign = 1

[node name="Sign" type="Area2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="Sign"]
visible = false

[node name="Label" type="Label" parent="Sign/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
text = "The Door to Enlightenment will only appear 
to he who carries the Gem of Badassitude"
align = 1
valign = 1

[node name="Sign05" type="Sprite" parent="Sign"]
position = Vector2( -440, 96 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sign"]
position = Vector2( -440, 80 )
shape = SubResource( 2 )

[connection signal="body_entered" from="Door" to="." method="_on_Door_body_entered"]
[connection signal="body_entered" from="Sign" to="." method="_on_Sign_body_entered"]
[connection signal="body_exited" from="Sign" to="." method="_on_Sign_body_exited"]
